JP GENERATION - GRAMMAR CHECK

--- a/plne-responzivny-web/jpgeneration/cookie.html
+++ b/plne-responzivny-web/jpgeneration/cookie.html
@@ -6,11 +6,14 @@
     <script>
         window.dataLayer = window.dataLayer || [];
 
+
         function gtag() {
             dataLayer.push(arguments);
         }
 
+
         gtag('js', new Date());
+
 
         gtag('config', 'G-408VDD82V3');
     </script>
@@ -61,9 +64,9 @@
                 <div class="dropdown-content">
                     <a href="sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -74,9 +77,9 @@
                 <div class="dropdown-content">
                     <a href="cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -128,6 +131,7 @@
         </p>
     </div>
 
+
     &nbsp;
     <h2>Ako sa používajú cookies?</h2>
     <div><p class="privacy-policy-p">Ako väčšina online služieb, naše webové stránky používajú
@@ -142,10 +146,13 @@
             A celkovo vám poskytujú lepšie a lepšie skúsenosti s používateľmi a pomáhajú urýchliť vašu budúcnosť.
             Interakcie s našou webovou stránkou.</p></div>
 
+
     &nbsp;
     <h2>Druhy cookies, ktoré používame</h2>
 
+
     <div class="cky-audit-table-element"></div>
+
 
     &nbsp;
     <h2>Spravovať preferencie cookie</h2>
@@ -155,13 +162,14 @@
     <br/>
     <br/>
 
+
     <div><p class="privacy-policy-p">Vaše preferencie na cookie môžete kedykoľvek zmeniť kliknutím na vyššie uvedené
         tlačidlo. Toto
         Dovoľte vám prehodnotiť
         Nápis súhlas cookie a zmeniť vaše preferencie alebo odvolať súhlas hneď.</p>
-        <p class="privacy-policy-p">Okrem toho rôzne prehľadávače poskytujú rôzne metódy blokovania a
+        <p class="privacy-policy-p">Okrem toho rôzne prehliadače poskytujú rôzne metódy blokovania a
             Odstráňte sušienky použité
-            Webové stránky. Môžete zmeniť nastavenie svojho prehľadávača, aby ste zablokovali / odstránili cookies.
+            Webové stránky. Môžete zmeniť nastavenie svojho prehliadača, aby ste zablokovali / odstránili cookies.
             Nižšie sú uvedené
             Odkazy na podporné dokumenty o spôsobe riadenia a odstraňovania cookies z hlavných webových
             prehliadačov.</p>
@@ -180,7 +188,7 @@
                                                           href="https://support.microsoft.com/en-us/topic/how-to-delete-cookie-files-in-internet-explorer-bca9446f-d873-78de-77ba-d42645fa52fc"
                                                           target="_blank">https://support.microsoft.com/en-us/topic/how-to-delete-cookie-files-in-internet-explorer-bca9446f-d873-78de-77ba-d42645fa52fc</a>
         </p>
-        <p class="privacy-policy-p">Ak používate iný internetový prehľadávač, navštívte oficiálnu podporu vášho
+        <p class="privacy-policy-p">Ak používate iný internetový prehliadač, navštívte oficiálnu podporu vášho
             prehľadávača.
             Dokumenty.</p></div>
 
@@ -218,7 +226,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -256,7 +264,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -266,6 +274,7 @@
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
                     <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -336,3 +345,4 @@
 <script src="../js/dropdown-nav.js" type="text/javascript"></script>
 </body>
 </html>
+
