--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -61,9 +61,9 @@
                 <div class="dropdown-content">
                     <a href="sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -74,9 +74,9 @@
                 <div class="dropdown-content">
                     <a href="cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -96,7 +96,7 @@
 <!-------------PHOTO SLIDER--------------->
 <section class="slider">
     <div class="slideshow-container">
-        <div class="text">Kreatívna myseľ, kreatívna praca.</div>
+        <div class="text">Kreatívna myseľ, kreatívna práca.</div>
         <div class="text2">My sme digitálna generácia</div>
         <!-----------1.-------->
         <div class="mySlides">
@@ -170,7 +170,7 @@
     </div>
 </section>
 <br>
-<!-------------IDEA OF THE COMAPNY--------------->
+<!-------------IDEA OF THE COMPANY--------------->
 <section class="concept">
     <div class="concept-container">
         <div class="kon-con1">
@@ -184,7 +184,7 @@
             <h3 class="con-h">Veľké nápady</h3>
             <span class="spacer"></span>
             <div class="line-con"></div>
-            <p class="con-p">Netrápte sa s tým že nemáte predstavu ako by to malo vyzerať. Vymyslime to za Vás…</p>
+            <p class="con-p">Netrápte sa s tým že nemáte predstavu ako by to malo vyzerať. Vymyslíme to za Vás…</p>
         </div>
         <div class="kon-con3">
             <i aria-hidden="true" class="fa fa-lightbulb-o" id="icon-con3"></i>
@@ -218,13 +218,13 @@
         <div id="turquise">
             <i aria-hidden="true" class="fa fa-video-camera" id="ser-icon2"></i>
             <h3 class="turquise-bl">Video produkcia</h3>
-            <p class="con-p-black">Využívali ste do teraz len free mobilne aplikácie pre Vašú tvorbu? A po nahraní sa
+            <p class="con-p-black">Používali ste doteraz len free mobilné aplikácie pre Vašu tvorbu? A po nahratí sa
                 Vám zdalo že už to
-                nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
+                nie je ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
         </div>
         <div class="white">
             <i aria-hidden="true" class="fa fa-pencil-square-o" id="ser-icon3"></i>
-            <h3>Graficky dizajn</h3>
+            <h3>Grafický dizajn</h3>
             <p class="con-p">Banner, logo, plagát, vizitka, vizualizácia…
                 Všetko čo Vám napadne pod slovo graficky dizajn…</p>
         </div>
@@ -238,14 +238,14 @@
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-server" id="ser-icon5"></i>
-            <h3>Správa domeny a hostingu</h3>
-            <p class="con-p">Zaberá Vám správa Vášho e-shopu veľa času? Nechatje to na Nás…</p>
+            <h3>Správa domény a hostingu</h3>
+            <p class="con-p">Zaberá Vám správa Vášho eshopu veľa času? Nechajte to na Nás…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-line-chart" id="ser-icon6"></i>
             <h3>Digitálna stratégia</h3>
             <span class="spacer"></span>
-            <p class="con-p">Každá dobra stratégia potrebuje analýzu ktorú Vám poskytneme…</p>
+            <p class="con-p">Každá dobrá stratégia potrebuje analýzu ktorú Vám poskytneme…</p>
         </div>
     </section>
 </section>
@@ -363,10 +363,10 @@
             <div class="con-main">
                 <div class="spacer"></div>
             </div>
-            <h2 class="skills">Tu su nejaké naše zručnosti</h2>
+            <h2 class="skills">Tu sú nejaké naše zručnosti</h2>
         </header>
         <div class="skill-text">
-            Nikto nieje dokonalý preto Vás nebudeme klamať že všetko ovladáme na 100%. Vždy sa da niečo nové
+            Nikto nieje dokonalý preto Vás nebudeme klamať že všetko ovládame na 100%. Vždy sa da niečo nové
             naučiť a ak si myslíte nie znamená to len jedno…
         </div>
         <section class="skill-list">
@@ -401,7 +401,7 @@
                         <div class="percent">95%</div>
                     </div>
                     <div class="progress-title-holder">
-                        <div class="progress-title">Graficky dizajn</div>
+                        <div class="progress-title">Grafický dizajn</div>
                     </div>
                     <div class="progress-content-outter">
                         <div class="progress-content"></div>
@@ -425,7 +425,7 @@
                         <div class="percent">60%</div>
                     </div>
                     <div class="progress-title-holder">
-                        <div class="progress-title">Správa domeny a hostingu</div>
+                        <div class="progress-title">Správa domény a hostingu</div>
                     </div>
                     <div class="progress-content-outter">
                         <div class="progress-content"></div>
@@ -493,7 +493,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -531,7 +531,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -541,6 +541,7 @@
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
                     <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -597,7 +598,6 @@
             </ul>
         </div>
     </section>
-
     <!-------------COPYRIGHT-------------->
     <section class="copy-write">
         <div class="copy-box">
@@ -615,10 +615,10 @@
 <script src="../js/skill-bar.js" type="text/javascript"></script>
 </body>
 </html>
-
 <!-------------TO DO-------------->
-<!--TODO animacia navigacneho menu na X-->
+<!--TODO animácia navigacneho menu na X-->
 <!--TODO Equal width menu-->
-<!--TODO upravit design pre mobily-->
-<!--TODO Sroll buttom up -->
-<!--TODO Animacia na každu sekciu -->
+<!--TODO spraviť design pre mobily-->
+<!--TODO Scroll bottom up -->
+<!--TODO Animácia na každú sekciu -->
+
