--- a/plne-responzivny-web/jpgeneration/portfolio/fotky.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/fotky.html
@@ -6,11 +6,14 @@
     <script>
         window.dataLayer = window.dataLayer || [];
 
+
         function gtag() {
             dataLayer.push(arguments);
         }
 
+
         gtag('js', new Date());
+
 
         gtag('config', 'G-408VDD82V3');
     </script>
@@ -61,9 +64,9 @@
                 <div class="dropdown-content">
                     <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -74,9 +77,9 @@
                 <div class="dropdown-content">
                     <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -106,13 +109,13 @@
         <span>Vaša realizácia služby môže vyzerať takto</span>
     </div>
 </section>
-<!-------------PORTFOLI FOTO GALERRY-------------->
+<!-------------PORTFOLIO FOTO GALLERY-------------->
 <section class="gallery-port">
     <div class="container-port">
         <div class="gallery-filter">
             <span class="filter-item active" data-filter="all">Všetky</span>
             <span class="filter-item" data-filter="foto-produkcia">Foto produkcia</span>
-            <span class="filter-item" data-filter="graficky-dizajn">Graficky dizajn</span>
+            <span class="filter-item" data-filter="graficky-dizajn">Grafický dizajn</span>
             <span class="filter-item" data-filter="wordpress-web">WordPress web</span>
             <span class="filter-item" data-filter="digitalna-strategia">Digitálna stratégia</span>
         </div>
@@ -147,7 +150,7 @@
             <div class="gallery-item foto-produkcia" data-filter="foto-produkcia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="Zapaľovanie cigary" onclick="openModal(this)"
+                        <img alt="Zapalovanie cigary" onclick="openModal(this)"
                              src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00008.webp">
                         <div class="image-caption-w">Chivas Regal XV promo</div>
                         <div class="image-text-w">ENCORE the club</div>
@@ -359,14 +362,14 @@
                 </div>
             </div>
             <!-- gallery item end -->
-            <!----------------------------Filter - graficky dizajn---------------------------->
+            <!----------------------------Filter - grafický dizajn---------------------------->
             <!-- gallery item start -->
             <div class="gallery-item graficky-dizajn" data-filter="graficky-dizajn">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
                         <img alt="Nápojový lístok" onclick="openModal(this)"
                              src="../../image/gallery/graficky-dizajn/jp-graficky-dizajn-00002.webp">
-                        <div class="image-caption-w">Napojový lístok</div>
+                        <div class="image-caption-w">Nápojový lístok</div>
                         <div class="image-text-w">BRILIA</div>
                     </div>
                 </div>
@@ -564,7 +567,7 @@
                     <div class="image-overlay">
                         <img alt="Firemná fotka ženy" onclick="openModal(this)"
                              src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00023.webp">
-                        <div class="image-caption-w">Bussines portrét</div>
+                        <div class="image-caption-w">Business portrét</div>
                         <div class="image-text-w">ENCORE the club</div>
                     </div>
                 </div>
@@ -670,9 +673,9 @@
             <div class="gallery-item foto-produkcia" data-filter="foto-produkcia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="Shushi" onclick="openModal(this)"
+                        <img alt="Sushi" onclick="openModal(this)"
                              src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00051.webp">
-                        <div class="image-caption-w">Shushi promo</div>
+                        <div class="image-caption-w">Sushi promo</div>
                         <div class="image-text-w">ENCORE the club x Kvadrat sushi</div>
                     </div>
                 </div>
@@ -694,7 +697,7 @@
             <div class="gallery-item foto-produkcia" data-filter="foto-produkcia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="Horúce červene víno" onclick="openModal(this)"
+                        <img alt="Horúce červené víno" onclick="openModal(this)"
                              src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00057.webp">
                         <div class="image-caption-h">Winter menu</div>
                         <div class="image-text-h">ENCORE the club</div>
@@ -714,7 +717,7 @@
                 </div>
             </div>
             <!-- gallery item end -->
-            <!----------------------------Filter - graficky dizajn---------------------------->
+            <!----------------------------Filter - grafický dizajn---------------------------->
             <!-- gallery item start -->
             <div class="gallery-item graficky-dizajn" data-filter="graficky-dizajn">
                 <div class="gallery-item-inner">
@@ -745,7 +748,7 @@
                     <div class="image-overlay">
                         <img alt="QR napojový lístok" onclick="openModal(this)"
                              src="../../image/gallery/graficky-dizajn/jp-graficky-dizajn-00009.webp">
-                        <div class="image-caption-w">QR napojový lístok</div>
+                        <div class="image-caption-w">QR nápojový lístok</div>
                         <div class="image-text-w">ENCORE the club</div>
                     </div>
                 </div>
@@ -825,6 +828,7 @@
             </div>
             <!-- gallery item end -->
             <!----------------------------Filter - digitálna stratégia---------------------------->
+
 
         </div>
         <!-----------------------------------------3. column----------------------------------------->
@@ -966,7 +970,7 @@
             <div class="gallery-item foto-produkcia" data-filter="foto-produkcia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="Malfy origina / con arancia / rosa gin tonic" onclick="openModal(this)"
+                        <img alt="Malfy originale / con arancia / rosa gin tonic" onclick="openModal(this)"
                              src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00037.webp">
                         <div class="image-caption-w">Cocktail menu</div>
                         <div class="image-text-w">ENCORE the club</div>
@@ -1026,9 +1030,9 @@
             <div class="gallery-item foto-produkcia" data-filter="foto-produkcia">
                 <div class="gallery-item-inner">
                     <div class="image-overlay">
-                        <img alt="Shushi" onclick="openModal(this)"
+                        <img alt="Sushi" onclick="openModal(this)"
                              src="../../image/gallery/foto-produkcia/jp-foto-produkcia-00052.webp">
-                        <div class="image-caption-w">Shushi promo</div>
+                        <div class="image-caption-w">Sushi promo</div>
                         <div class="image-text-w">ENCORE the club x Kvadrat sushi</div>
                     </div>
                 </div>
@@ -1058,7 +1062,7 @@
                 </div>
             </div>
             <!-- gallery item end -->
-            <!----------------------------Filter - graficky dizajn---------------------------->
+            <!----------------------------Filter - grafický dizajn---------------------------->
             <!-- gallery item start -->
             <div class="gallery-item graficky-dizajn" data-filter="graficky-dizajn">
                 <div class="gallery-item-inner">
@@ -1077,7 +1081,7 @@
                     <div class="image-overlay">
                         <img alt="E-mail dizajn" onclick="openModal(this)"
                              src="../../image/gallery/graficky-dizajn/jp-graficky-dizajn-00004.webp">
-                        <div class="image-caption-h">Dizaj e-mailovej komunikácie</div>
+                        <div class="image-caption-h">Dizajn e-mailovej komunikácie</div>
                         <div class="image-text-h">ENCORE the club</div>
                     </div>
                 </div>
@@ -1173,6 +1177,7 @@
     </div>
 </section>
 
+
 <!-- Gallery Modal -->
 <div class="modal-port" id="galleryModal-port">
     <div id="photoclosecontainer">
@@ -1213,7 +1218,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -1251,7 +1256,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -1261,6 +1266,7 @@
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
                     <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -1332,3 +1338,4 @@
 <script src="../../js/portfol-fotky.js" type="text/javascript"></script>
 </body>
 </html>
+
