--- a/plne-responzivny-web/jpgeneration/cennik/cena-foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-foto-produkcia.html
@@ -6,11 +6,14 @@
     <script>
         window.dataLayer = window.dataLayer || [];
 
+
         function gtag() {
             dataLayer.push(arguments);
         }
 
+
         gtag('js', new Date());
+
 
         gtag('config', 'G-408VDD82V3');
     </script>
@@ -61,9 +64,9 @@
                 <div class="dropdown-content">
                     <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -74,9 +77,9 @@
                 <div class="dropdown-content">
                     <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -113,14 +116,14 @@
     </div>
     <section class="content-price-1">
         <div class="block-black">
-            <h2>Produktové fotenie (v atelieri)</h2>
+            <h2>Produktové fotenie (v ateliéri)</h2>
             <p class="min-order">Minimálna objednávka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
                 <li class="price-text">Profesionálne nastavenie</li>
                 <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Postprodukcia fotografii</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
@@ -129,14 +132,14 @@
             </div>
         </div>
         <div class="block-gray">
-            <h2>PRODUKTOVÉ FOTENIE (MIMO ATELIÉR)</h2>
+            <h2>Produktové fotenie (mimo atelieru)</h2>
             <p class="min-order">Minimálna objednávka 20ks</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
                 <li class="price-text">Profesionálne nastavenie</li>
                 <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Postprodukcia fotografii</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
@@ -145,15 +148,15 @@
             </div>
         </div>
         <div class="block-black">
-            <h2>INTERIÉROVÉ FOTENIE</h2>
+            <h2>Interiérové fotenie</h2>
             <span class="spacer-price-text"></span>
             <p class="min-order">Minimálna objednávka 6ks</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
                 <li class="price-text">Cesta v rámci PO zdarma</li>
-                <li class="price-text">Upráva interiéru pred fotením</li>
-                <li class="price-text">Postproduckia fotografií</li>
+                <li class="price-text">Úprava interiéru pred fotením</li>
+                <li class="price-text">Postprodukcia fotografií</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
@@ -171,7 +174,7 @@
             <hr>
             <ul class="price-info">
                 <li class="price-text">Cesta v rámci PO zdarma</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Postprodukcia fotografii</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
                 <span class="spacer-price-li"></span>
@@ -190,7 +193,7 @@
                 <li class="price-text">Fotenie v ateliéri</li>
                 <li class="price-text">Výber pozadia (biele, transparent…)</li>
                 <li class="price-text">Profesionálny retuš</li>
-                <li class="price-text">Postproduckia fotografií</li>
+                <li class="price-text">Postprodukcia fotografií</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
@@ -199,7 +202,7 @@
             </div>
         </div>
         <div class="block-gray">
-            <h2>Exterierové portrétove fotenie (nekomerčné)</h2>
+            <h2>Exteriérové portrétne fotenie (nekomerčné)</h2>
             <p class="min-order">Minimálna objednávka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
@@ -207,7 +210,7 @@
                 <li class="price-text">Fotenie v exteriéri určenom Vami</li>
                 <li class="price-text">Profesionálne nastavenie</li>
                 <li class="price-text">Profesionálny retuš</li>
-                <li class="price-text">Postproduckia fotografií</li>
+                <li class="price-text">Postprodukcia fotografií</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
@@ -218,152 +221,158 @@
     </section>
     <section class="content-price-3">
         <div class="block-black">
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+            <h2>Svadobné fotenie (A)</h2>
+            <p class="min-order">Portréty + obrad</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Obrad + gratulácie po obrade</li>
+                <li class="price-text">Portréty mladomanželov na ich zvolenom mieste</li>
+                <li class="price-text">Postprodukcia fotografií</li>
+                <li class="price-text">Profesionálny retuš</li>
+                <li class="price-text">40 tlačených fotiek 13 x 18 cm</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
+                <span class="spacer-price-li"></span>
+                <span class="spacer-price-li"></span>
             </ul>
             <div class="btn-price-gray">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+                <p class="price-eur">450€</p>
             </div>
         </div>
         <div class="block-gray">
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+            <h2>Svadobné fotenie (B)</h2>
+            <p class="min-order">Fotenie do 01:00</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotenie od ranných príprav, svadobného obradu… až do 01:00</li>
+                <li class="price-text">Portréty mladomanželov na ich zvolenom mieste</li>
+                <li class="price-text">Postprodukcia fotografií</li>
+                <li class="price-text">Profesionálny retuš</li>
+                <li class="price-text">Fotokniha</li>
+                <li class="price-text">50 tlačených fotiek 13 x 18 cm</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
             <div class="btn-price-black">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+                <p class="price-eur">800€ + 50€ načatá hod.</p>
             </div>
         </div>
         <div class="block-black">
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+            <h2>Biznis fotenie</h2>
+            <p class="min-order">Minimálna objednávka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
+                <li class="price-text">Fotenie v ateliéri</li>
                 <li class="price-text">Profesionálne nastavenie</li>
                 <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Postprodukcia fotografií</li>
+                <li class="price-text">Profesionálny retuš</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
+                <span class="spacer-price-li"></span>
+                <span class="spacer-price-li"></span>
+                <span class="spacer-price-li"></span>
             </ul>
             <div class="btn-price-gray">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+                <p class="price-eur">25€ / fotka</p>
             </div>
         </div>
     </section>
     <section class="content-price-4">
         <div class="block-gray">
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+            <h2>Reportážne fotenie (event / koncert…)</h2>
+            <p class="min-order">2 hodiny</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotografie na druhý deň po akcií</li>
+                <li class="price-text">Fotenie v interiéri alebo exteriéri</li>
+                <li class="price-text">Postprodukcia fotografií</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
+                <span class="spacer-price-li"></span>
             </ul>
             <div class="btn-price-black">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+                <p class="price-eur">125€ / 50€ načatá hod.</p>
             </div>
         </div>
         <div class="block-black">
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+            <h2>Reportážne fotenie (event / koncert…)</h2>
+            <p class="min-order">Celodenné fotenie</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">10 fotografií k dispozícií na druhý deň</li>
+                <li class="price-text">Fotenie v interiéri alebo exteriéri</li>
+                <li class="price-text">Postprodukcia fotografií</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
             <div class="btn-price-gray">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+                <p class="price-eur">500€</p>
             </div>
         </div>
         <div class="block-gray">
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+            <h2>Reklamné fotenie</h2>
+            <span class="spacer-price-text"></span>
+            <p class="min-order">Čas alebo počet ks dohodou</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
                 <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Profesionálny retuš</li>
+                <li class="price-text">Fotenie v interiéri alebo exteriéri</li>
+                <li class="price-text">Postprodukcia fotografií</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
             <div class="btn-price-black">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+                <p class="price-eur">Dohodou</p>
             </div>
         </div>
     </section>
     <section class="content-price-5">
         <div class="block-black">
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+            <h2>REKLAMNÁ KAMPAŇ FOTENIE</h2>
+            <p class="min-order">Čas alebo počet ks dohodou</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
                 <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Fotenie v interiéri alebo exteriéri</li>
+                <li class="price-text">Profesionálny retuš</li>
+                <li class="price-text">Postprodukcia fotografií</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
             <div class="btn-price-gray">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+                <p class="price-eur">Dohodou</p>
             </div>
         </div>
         <div class="block-gray">
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
+            <h2>360° PRODUKTOVÉ FOTENIE</h2>
+            <p class="min-order">Minimálna objednávka 10ks</p>
             <p class="order-text">Balík obsahuje:</p>
             <hr>
             <ul class="price-info">
                 <li class="price-text">Profesionálne nastavenie</li>
                 <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
+                <li class="price-text">Postprodukcia fotografií</li>
+                <li class="price-text">Profesionálny retuš</li>
                 <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
                 <li class="price-text">Online dodanie fotiek</li>
             </ul>
             <div class="btn-price-black">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
+                <p class="price-eur">14€ / fotka alebo 90€ / hod.</p>
             </div>
         </div>
-        <div class="block-black">
-            <h2>Produktové fotenite (v atelieri)</h2>
-            <p class="min-order">Minimálna objednavka 10ks</p>
-            <p class="order-text">Balík obsahuje:</p>
-            <hr>
-            <ul class="price-info">
-                <li class="price-text">Profesionálne nastavenie</li>
-                <li class="price-text">Výber pozadia (biele, transparent…)</li>
-                <li class="price-text">Postproduckia fotografiíi</li>
-                <li class="price-text">Fotografie dodáme vo formáte ktorý Vám vyhovuje</li>
-                <li class="price-text">Online dodanie fotiek</li>
-            </ul>
-            <div class="btn-price-gray">
-                <p class="price-eur">12€ / fotka alebo 60€ / hod.</p>
-            </div>
+        <div class="block-transparent">
+            <h2></h2>
+            <p class="min-order"></p>
+            <p class="order-text"></p>
         </div>
     </section>
 </section>
@@ -392,7 +401,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -421,7 +430,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../cookie.html">Zásady používania súborov cookie</a>
+                    <a href="../cookie.html">Zásady používania súborov cookies</a>
                 </div>
             </div>
         </div>
@@ -430,7 +439,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -440,6 +449,7 @@
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
                     <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -510,3 +520,4 @@
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 </body>
 </html>
+
