--- a/plne-responzivny-web/jpgeneration/cennik/cena-graficky-dizajn.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-graficky-dizajn.html
@@ -6,11 +6,14 @@
     <script>
         window.dataLayer = window.dataLayer || [];
 
+
         function gtag() {
             dataLayer.push(arguments);
         }
 
+
         gtag('js', new Date());
+
 
         gtag('config', 'G-408VDD82V3');
     </script>
@@ -20,7 +23,7 @@
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Cenník - graficky dizajn - JP GENERATION</title>
+    <title>Cenník - grafický dizajn - JP GENERATION</title>
     <link href="../../image/logo/asset-8-8.png" rel="icon" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="../../css/style.css" rel="stylesheet">
@@ -61,9 +64,9 @@
                 <div class="dropdown-content">
                     <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -74,9 +77,9 @@
                 <div class="dropdown-content">
                     <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -100,7 +103,7 @@
             <div class="line-con1"></div>
             <div class="spacer"></div>
         </div>
-        <h2>Cenník - Graficky dizajn</h2>
+        <h2>Cenník - Grafický dizajn</h2>
         <div class="services-btn">
             <button class="port-btn">
                 <a class="port-txt" href="../kontakt.html">Mám záujem <i aria-hidden="true"
@@ -109,7 +112,7 @@
         </div>
     </header>
     <div class="con-look">
-        <span>Cena za váš graficky dizajn</span>
+        <span>Cena za váš grafický dizajn</span>
     </div>
 </section>
 <br>
@@ -137,7 +140,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -175,7 +178,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -185,6 +188,7 @@
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
                     <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -255,3 +259,4 @@
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 </body>
 </html>
+
