--- a/plne-responzivny-web/jpgeneration/cennik/cena-video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-video-produkcia.html
@@ -6,11 +6,14 @@
     <script>
         window.dataLayer = window.dataLayer || [];
 
+
         function gtag() {
             dataLayer.push(arguments);
         }
 
+
         gtag('js', new Date());
+
 
         gtag('config', 'G-408VDD82V3');
     </script>
@@ -61,9 +64,9 @@
                 <div class="dropdown-content">
                     <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -74,9 +77,9 @@
                 <div class="dropdown-content">
                     <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -137,7 +140,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -175,7 +178,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -185,6 +188,7 @@
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
                     <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -255,3 +259,4 @@
 <script src="../../js/dropdown-nav.js" type="text/javascript"></script>
 </body>
 </html>
+
