--- a/plne-responzivny-web/jpgeneration/gdpr.html
+++ b/plne-responzivny-web/jpgeneration/gdpr.html
@@ -6,11 +6,14 @@
     <script>
         window.dataLayer = window.dataLayer || [];
 
+
         function gtag() {
             dataLayer.push(arguments);
         }
 
+
         gtag('js', new Date());
+
 
         gtag('config', 'G-408VDD82V3');
     </script>
@@ -61,9 +64,9 @@
                 <div class="dropdown-content">
                     <a href="sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -74,9 +77,9 @@
                 <div class="dropdown-content">
                     <a href="cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -121,20 +124,22 @@
         telefón: 0907112358<br>
         <br>
         o zhromažďovaní, používaní a zverejňovaní vašich údajov, ktoré zhromažďujeme, keď používate našu webovú stránku.
-        ( https://www.testjpgeneration.sk ). (služba&quot;). Prístupom alebo používaním Služby vyjadrujete súhlas so
-        zhromažďovaním, používaním a zverejňovaním vašich informácií v súlade s týmito Zásadami ochrany osobných údajov.
+        ( https://www.testjpgeneration.sk ). (ďalej len „služba“). Prístupom alebo používaním Služby vyjadrujete súhlas
+        so
+        zhromažďovaním, používaním a zverejnením vašich informácií v súlade s týmito Zásadami ochrany osobných údajov.
         Ak s tým nesúhlasíte, nepristupujte k Službe ani ju nepoužívajte.
     </p>
     <br>
     <p class="privacy-policy-p">
         Tieto Zásady ochrany osobných údajov môžeme kedykoľvek upraviť bez akéhokoľvek predchádzajúceho upozornenia a
-        revidované Zásady ochrany osobných údajov zverejníme v službe. Revidované Zásady nadobudnú účinnosť 180 dní od
+        revidované Zásady ochrany osobných údajov zverejníme v službe. Revidované Zásady nadobúdajú účinnosť 180 dní od
         ich zverejnenia v Službe a váš pokračujúci prístup k Službe alebo jej používanie po tomto čase bude znamenať váš
         súhlas s revidovanými Zásadami ochrany osobných údajov. Odporúčame vám preto pravidelne kontrolovať túto
         stránku.
     </p>
     <br>
     <ol class="privacy-policy-ol">
+
 
         <h2 class="privacy-policy-h2">
             1. Informácie, ktoré zhromažďujeme:
@@ -144,12 +149,12 @@
         </p>
         <ol class="privacy-policy-ol">
             <li>Meno</li>
-            <li>E-mail</li>
-            <li>Telefóne číslo</li>
+            <li>Email</li>
+            <li>Telefónne číslo</li>
         </ol>
         <br>
         <h2 class="privacy-policy-h2">
-            2. Ako používame vaše informácie:
+            2. Ako využívame vaše informácie:
         </h2>
         <p class="privacy-policy-p">
             Informácie, ktoré o vás zhromažďujeme, použijeme na nasledujúce účely:
@@ -185,7 +190,7 @@
         <p class="privacy-policy-p">
             V závislosti od platného zákona môžete mať právo na prístup k svojim osobným údajom a ich opravu alebo
             vymazanie alebo môžete získať kópiu svojich osobných údajov, obmedziť alebo namietať proti aktívnemu
-            spracúvaniu vašich údajov, požiadať nás o zdieľanie (prenos) vašich osobných údajov informácie inému
+            spracovávaniu vašich údajov, požiadať nás o zdieľanie (prenos) vašich osobných údajov informácie inému
             subjektu, odvolať akýkoľvek súhlas, ktorý ste nám poskytli so spracovaním vašich údajov, právo podať
             sťažnosť zákonnému orgánu a ďalšie práva, ktoré môžu byť relevantné podľa platných zákonov. Na
             uplatnenie
@@ -206,7 +211,7 @@
             5. Súbory cookie atď.
         </h2>
         <p class="privacy-policy-p">
-            Ak sa chcete dozvedieť viac o tom, ako používame tieto a vaše voľby v súvislosti s týmito technológiami
+            Ak sa chcete dozvedieť viac o tom, ako používame tieto a vaše voľby v súvislosti s týmito technologiami
             sledovania, pozrite si naše
             <a class="text-link" href="cookie.html">Zásady používania súborov cookie.</a>
         </p>
@@ -283,7 +288,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -321,7 +326,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -331,6 +336,7 @@
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
                     <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -401,3 +407,4 @@
 <script src="../js/dropdown-nav.js" type="text/javascript"></script>
 </body>
 </html>
+
