--- a/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/digitalna-strategia.html
@@ -8,6 +8,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
+
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
@@ -56,9 +57,9 @@
                 <div class="dropdown-content">
                     <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -69,9 +70,9 @@
                 <div class="dropdown-content">
                     <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -111,7 +112,8 @@
             <i aria-hidden="true" class="fa fa-home" id="con-ser-icon1"></i>
             <h3>Analýza firmy</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Analýza poskytovaných produktov a služieb. Analýza silných a slabých strán firmy + príležitostí a rizík klienta…</p>
+            <p class="con-ser-p">Analýza poskytovaných produktov a služieb. Analýza silných a slabých stránok firmy +
+                príležitostí a rizík klienta…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-users" id="con-ser-icon2"></i>
@@ -135,7 +137,7 @@
         <div>
             <i aria-hidden="true" class="fa fa-laptop" id="con-ser-icon5"></i>
             <h3>Nastavenie stratégie</h3>
-            <p class="con-ser-p">Nastavenie marketingovej, biznisovej a digitálnej kampane priamo pre Vašé potreby…</p>
+            <p class="con-ser-p">Nastavenie marketingovej, biznisovej a digitálnej kampane priamo pre Vaše potreby…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-calculator" id="con-ser-icon6"></i>
@@ -147,7 +149,8 @@
         <div>
             <i aria-hidden="true" class="fa fa-microphone-slash" id="con-ser-icon7"></i>
             <h3>Diskrétnosť</h3>
-            <p class="con-ser-p">Nemusíte sa báť že Vám niečo unikne. Vašé interné informácie nepoužijeme v podklade pre iné firmy alebo pre našé portfólio…</p>
+            <p class="con-ser-p">Nemusíte sa báť že Vám niečo unikne. Vaše interné informácie nepoužijeme v podklade pre
+                iné firmy alebo pre naše portfólio…</p>
         </div>
         <section class="spacer-div"></section>
         <section class="spacer-div"></section>
@@ -188,6 +191,7 @@
                         <p>Službu realizujeme fyzicky na Vami zvolenom mieste ak Vaša firma má pobočku. V prípade že ste e-shop bez pobočky služba sa vykonáva elektronicky. Report Vám dodáme osobne alebo prostredníctvom elektronickej komunikácie.</p>
                     </div>
 
+
                 </div>
                 <div class="menu-2">
                     <button class="accordion"><span class="btn-text">Platba za službu</span></button>
@@ -195,6 +199,7 @@
                         <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií
                             služby.</p>
                     </div>
+
 
                 </div>
                 <div class="menu-3">
@@ -204,9 +209,12 @@
                         <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
                     </div>
 
+
                 </div>
 
+
             </div>
+
 
         </div>
     </div>
@@ -237,7 +245,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -275,7 +283,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -283,8 +291,9 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
-                    <a href="mailto:jaroslavpotocny@icloud.com">info@jpgeneration.sk</a>
+                    <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -330,7 +339,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:jaroslavpotocny@icloud.com">
+                    <a href="mailto:info@jpgeneration.sk">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -356,3 +365,4 @@
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
+
