--- a/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/foto-produkcia.html
@@ -8,6 +8,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
+
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
@@ -56,9 +57,9 @@
                 <div class="dropdown-content">
                     <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -69,9 +70,9 @@
                 <div class="dropdown-content">
                     <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -131,19 +132,22 @@
         <div>
             <i aria-hidden="true" class="fa fa-users" id="con-ser-icon5"></i>
             <h3>Ľudia</h3>
-            <p class="con-ser-p">Potrebujete profesionálne fotky pre Vaších zamestnancov? Chceli by ste nový portrét alebo profilovú fotografiu? V pohodlí ateliéru to spolu dokážeme…</p>
+            <p class="con-ser-p">Potrebujete profesionálne fotky pre Vašich zamestnancov? Chceli by ste nový portrét
+                alebo profilovú fotografiu? V pohodlí ateliéru to spolu dokážeme…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-television" id="con-ser-icon6"></i>
             <h3>Reklama</h3>
-            <p class="con-ser-p">Vyčerpali ste databázu fotiek pre Vašú reklamu alebo sociálnu sieť? Poďme na to…</p>
+            <p class="con-ser-p">Vyčerpali ste databázu fotiek pre Vašu reklamu alebo sociálnu sieť? Poďme na to…</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa fa-repeat" id="con-ser-icon7"></i>
             <h3>360° fotografia</h3>
-            <p class="con-ser-p">Chcete poskytnúť svojím zákazníkom lepši zážitok a detail z prezeraného produktu? Veľkostne maximálne do 60 x 60 x 50cm. Auto Vám zatiaľ profesionálne nafotiť nedokážeme ale pre bežný produkt to bude stačiť…</p>
+            <p class="con-ser-p">Chcete poskytnúť svojim zákazníkom lepší zážitok a detail z prezerania produktu?
+                Veľkostné maximálne do 60 x 60 x 50 cm. Auto Vám zatiaľ profesionálne nafotiť nedokážeme ale pre bežný
+                produkt to bude stačiť…</p>
         </div>
         <section class="spacer-div"></section>
         <section class="spacer-div"></section>
@@ -181,8 +185,11 @@
                 <div class="menu-1">
                     <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
                     <div class="panel">
-                        <p>Službu realizujeme fyzicky na Vami zvolenom mieste. Upravené fotografie po fotení nahrajeme zákazníkovi na cloudove úložisko, kde budú uchované 30 dní. V prípade dodania fotografi v tlačovej forme už ide o konkrétnu dohodu medzi nami a zákazníkom.</p>
+                        <p>Službu realizujeme fyzicky na Vami zvolenom mieste. Upravené fotografie po fotení nahrajeme
+                            zákazníkovi na cloudové úložisko, kde budú uchované 30 dní. V prípade dodania fotografi v
+                            tlačovej forme už ide o konkrétnu dohodu medzi nami a zákazníkom.</p>
                     </div>
+
 
                 </div>
                 <div class="menu-2">
@@ -191,19 +198,24 @@
                         <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií služby.</p>
                     </div>
 
+
                 </div>
                 <div class="menu-3">
-                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span></button>
+                    <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
+                    </button>
                     <div class="panel">
                         <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
                     </div>
 
-                    </div>
 
                 </div>
 
+
             </div>
+
+
         </div>
+    </div>
     </div>
 </section>
 <br>
@@ -231,7 +243,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -269,7 +281,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -277,8 +289,9 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
-                    <a href="mailto:jaroslavpotocny@icloud.com">info@jpgeneration.sk</a>
+                    <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -324,7 +337,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:jaroslavpotocny@icloud.com">
+                    <a href="mailto:info@jpgeneration.sk">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -350,3 +363,4 @@
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
+
