--- a/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
@@ -8,6 +8,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
+
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
@@ -15,7 +16,7 @@
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Služby - graficky dizaj - JP GENERATION</title>
+    <title>Služby - grafický dizajn - JP GENERATION</title>
     <link href="../../image/logo/asset-8-8.png" rel="icon" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="../../css/style.css" rel="stylesheet">
@@ -56,9 +57,9 @@
                 <div class="dropdown-content">
                     <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -69,9 +70,9 @@
                 <div class="dropdown-content">
                     <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -95,7 +96,7 @@
             <div class="line-con1"></div>
             <div class="spacer"></div>
         </div>
-        <h2>Služba - Graficky dizajn</h2>
+        <h2>Služba - Grafický dizajn</h2>
         <div class="services-btn">
             <button class="port-btn">
                 <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i aria-hidden="true"
@@ -120,7 +121,8 @@
         <div>
             <i aria-hidden="true" class="fa fa-picture-o" id="con-ser-icon3"></i>
             <h3>Reklama</h3>
-            <p class="con-ser-p">Spracovanie reklamy pre internet, billboard alebo televíziu jednoducho všetko čo Vašá kampaň vyžaduje…</p>
+            <p class="con-ser-p">Spracovanie reklamy pre internet, billboard alebo televíziu jednoducho všetko čo Vaša
+                kampaň vyžaduje…</p>
         </div>
     </section>
     <section class="content-ser-2">
@@ -186,8 +188,10 @@
                 <div class="menu-1">
                     <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
                     <div class="panel">
-                        <p>Hotový dizajn alebo produkt nahrajeme zákazníkovi na cloudove úložisko, kde bude uchovaný 30 dní.</p>
+                        <p>Hotový dizajn alebo produkt nahrajeme zákazníkovi na cloudové úložisko, kde bude uchovaný 30
+                            dní.</p>
                     </div>
+
 
                 </div>
                 <div class="menu-2">
@@ -197,6 +201,7 @@
                             služby.</p>
                     </div>
 
+
                 </div>
                 <div class="menu-3">
                     <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
@@ -205,9 +210,12 @@
                         <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
                     </div>
 
+
                 </div>
 
+
             </div>
+
 
         </div>
     </div>
@@ -238,7 +246,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -276,7 +284,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -284,8 +292,9 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
-                    <a href="mailto:jaroslavpotocny@icloud.com">info@jpgeneration.sk</a>
+                    <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -331,7 +340,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:jaroslavpotocny@icloud.com">
+                    <a href="mailto:info@jpgeneration.sk">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -357,3 +366,4 @@
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
+
