--- a/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
@@ -8,6 +8,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
+
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
@@ -15,7 +16,7 @@
     <!-- End cookieyes banner -->
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>Služby - správa domeny a hostingu - JP GENERATION</title>
+    <title>Služby - správa domény a hostingu - JP GENERATION</title>
     <link href="../../image/logo/asset-8-8.png" rel="icon" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="../../css/style.css" rel="stylesheet">
@@ -56,9 +57,9 @@
                 <div class="dropdown-content">
                     <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -69,9 +70,9 @@
                 <div class="dropdown-content">
                     <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -95,7 +96,7 @@
             <div class="line-con1"></div>
             <div class="spacer"></div>
         </div>
-        <h2>Služba - Správa domeny a hostingu</h2>
+        <h2>Služba - Správa domény a hostingu</h2>
         <div class="services-btn">
             <button class="port-btn">
                 <a class="port-txt" href="../portfolio/fotky.html">Portfólio <i aria-hidden="true"
@@ -110,12 +111,13 @@
         <div>
             <i aria-hidden="true" class="fa fa-shopping-basket" id="con-ser-icon1"></i>
             <h3>Máme vlastnú domenu</h3>
-            <p class="con-ser-p">Maté vlastnú domenu? Neviete ako ju spravovať? Nevádi urobíme to za Vás…</p>
+            <p class="con-ser-p">Maté vlastnú domenu? Neviete ako ju spravovať? Nevadi urobime to za Vás…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-server" id="con-ser-icon2"></i>
             <h3>Máme vlastný hosting</h3>
-            <p class="con-ser-p">Po spustený webu Vám zanechaly prihlasovacie údaje a nevie čo s tým? Každe jedno nastavenie je pre Vás neznáme? Nechajte to na Nás…</p>
+            <p class="con-ser-p">Po spustený webu Vám zanechali prihlasovacie údaje a nevie čo s tým? Každé jedno
+                nastavenie je pre Vás neznáme? Nechajte to na Nás…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-clock-o" id="con-ser-icon3"></i>
@@ -137,7 +139,8 @@
         <div>
             <i aria-hidden="true" class="fa fa-shield" id="con-ser-icon6"></i>
             <h3>Kontrola zabezpečenia</h3>
-            <p class="con-ser-p">Skontrolujeme Váš kód, SSL certifikát, dáta, anti-spam, použivanie cookie a GDPR. Aby sa Váš klient cítil na Vašom webe bezpečne…</p>
+            <p class="con-ser-p">Skontrolujeme Váš kód, SSL certifikát, dáta, antispam, použivanie cookie a GDPR. Aby sa
+                Váš klient cítil na Vašom webe bezpečne…</p>
         </div>
     </section>
     <section class="content-ser-3">
@@ -149,7 +152,8 @@
         <div>
             <i aria-hidden="true" class="fa fa-medkit" id="con-ser-icon8"></i>
             <h3>24/7 Podpora</h3>
-            <p class="con-ser-p">Neočakavaná chyba môže nastať vždy. Preto sme tu pre Vás 24/7 aby Váš biznis mohol rásť…</p>
+            <p class="con-ser-p">Neočakávaná chyba môže nastať vždy. Preto sme tu pre Vás 24/7 aby Váš biznis mohol
+                rásť…</p>
         </div>
         <section class="spacer-div"></section>
     </section>
@@ -186,8 +190,10 @@
                 <div class="menu-1">
                     <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
                     <div class="panel">
-                        <p>Službu dodávame elektronicky od Vás budeme potrebovať prístupové údaje k vašej domene a hostingu alebo prípadne k FTP serveru.</p>
+                        <p>Službu dodávame elektronicky od Vás budeme potrebovať prístupové údaje k vašej doméne a
+                            hostingu alebo prípadne k FTP serveru.</p>
                     </div>
+
 
                 </div>
                 <div class="menu-2">
@@ -197,6 +203,7 @@
                             služby.</p>
                     </div>
 
+
                 </div>
                 <div class="menu-3">
                     <button class="accordion"><span class="btn-text">Nenašiel som informácie ktoré potrebujem</span>
@@ -205,9 +212,12 @@
                         <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
                     </div>
 
+
                 </div>
 
+
             </div>
+
 
         </div>
     </div>
@@ -238,7 +248,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -276,7 +286,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -284,8 +294,9 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
-                    <a href="mailto:jaroslavpotocny@icloud.com">info@jpgeneration.sk</a>
+                    <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -331,7 +342,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:jaroslavpotocny@icloud.com">
+                    <a href="mailto:info@jpgeneration.sk">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -357,3 +368,4 @@
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
+
