--- a/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
@@ -8,6 +8,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
+
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
@@ -56,9 +57,9 @@
                 <div class="dropdown-content">
                     <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -69,9 +70,9 @@
                 <div class="dropdown-content">
                     <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -114,8 +115,9 @@
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-instagram" id="con-ser-icon2"></i>
-            <h3>Instargam</h3>
-            <p class="con-ser-p">Reels alebo video post. Sledujete tie užasne videá na instagrame no neviete ich vytvoriť?Radi Vám s tým pomôžeme…</p>
+            <h3>Instagram</h3>
+            <p class="con-ser-p">Reels alebo video post. Sledujete tie úžasné videá na instagrame no neviete ich
+                vytvoriť?Radi Vám s tým pomôžeme…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-youtube-play" id="con-ser-icon3"></i>
@@ -127,7 +129,8 @@
         <div>
             <i aria-hidden="true" class="fa fa-globe" id="con-ser-icon4"></i>
             <h3>Web</h3>
-            <p class="con-ser-p">Využívali ste do teraz len free mobilne aplikácie pre Vašú tvorbu? A po nahraní sa Vám zdalo že už to nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
+            <p class="con-ser-p">Používali ste doteraz len free mobilné aplikácie pre Vašu tvorbu? A po nahratí sa Vám
+                zdá že už to nieje ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-scissors" id="con-ser-icon5"></i>
@@ -137,14 +140,17 @@
         <div>
             <i aria-hidden="true" class="fa fa-file-video-o" id="con-ser-icon6"></i>
             <h3>Re-editácia</h3>
-            <p class="con-ser-p">Máme sériu after movie a chceli by sme si pridať jedno spomienkové video a na všetky. Zašlite nám ich a urobíme z nich niečo nové…</p>
+            <p class="con-ser-p">Máme sériu after movie a chceli by sme si pridať jedno spomienkové video a na všetky.
+                Pošlite nám ich a urobíme z nich niečo nové…</p>
         </div>
     </section>
     <section class="content-ser-3">
         <div>
             <i aria-hidden="true" class="fa fa-repeat" id="con-ser-icon7"></i>
             <h3>360° video</h3>
-            <p class="con-ser-p">Chcete poskytnúť svojím zákazníkom lepši zážitok a detail z prezeraného produktu? Veľkostne maximálne do 60 x 60 x 50cm. Auto Vám zatiaľ profesionálne natočiť nedokážeme ale pre bežný produkt to bude stačiť…</p>
+            <p class="con-ser-p">Chcete poskytnúť svojim zákazníkom lepší zážitok a detail z prezerania produktu?
+                Veľkostné maximálne do 60 x 60 x 50 cm. Auto Vám zatiaľ profesionálne natočiť nedokážeme ale pre bežný
+                produkt to bude stačiť…</p>
         </div>
         <section class="spacer-div"></section>
         <section class="spacer-div"></section>
@@ -182,8 +188,10 @@
                 <div class="menu-1">
                     <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
                     <div class="panel">
-                        <p>Službu realizujeme fyzicky na Vami zvolenom mieste. Upravené video po točení nahrajeme zákazníkovi na cloudove úložisko, kde budú uchované 30 dní.</p>
+                        <p>Službu realizujeme fyzicky na Vami zvolenom mieste. Upravené video po točení nahrajeme
+                            zákazníkovi na cloudové úložisko, kde budú uchované 30 dní.</p>
                     </div>
+
 
                 </div>
                 <div class="menu-2">
@@ -191,6 +199,7 @@
                     <div class="panel">
                         <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií služby.</p>
                     </div>
+
 
                 </div>
                 <div class="menu-3">
@@ -200,9 +209,12 @@
                         <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
                     </div>
 
+
                 </div>
 
+
             </div>
+
 
         </div>
     </div>
@@ -233,7 +245,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -271,7 +283,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -279,8 +291,9 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
-                    <a href="mailto:jaroslavpotocny@icloud.com">info@jpgeneration.sk</a>
+                    <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -326,7 +339,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:jaroslavpotocny@icloud.com">
+                    <a href="mailto:info@jpgeneration.sk">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -352,3 +365,4 @@
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
+
