--- a/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/wordpress-web.html
@@ -8,6 +8,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
+
         gtag('config', 'G-408VDD82V3');
     </script>
     <!-- Start cookieyes banner -->
@@ -56,9 +57,9 @@
                 <div class="dropdown-content">
                     <a href="../sluzby/foto-produkcia.html">Foto produkcia</a>
                     <a href="../sluzby/video-produkcia.html">Video produkcia</a>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../sluzby/wordpress-web.html">Wordpress web</a>
-                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../sluzby/sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../sluzby/digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -69,9 +70,9 @@
                 <div class="dropdown-content">
                     <a href="../cennik/cena-foto-produkcia.html">Foto produkcia</a>
                     <a href="../cennik/cena-video-produkcia.html">Video produkcia</a>
-                    <a href="../cennik/cena-graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../cennik/cena-graficky-dizajn.html">Grafický dizajn</a>
                     <a href="../cennik/cena-wordpress-web.html">Wordpress web</a>
-                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domeny a hostingu</a>
+                    <a href="../cennik/cena-sprava-domeny-a-hostingu.html">Správa domény a hostingu</a>
                     <a href="../cennik/cena-digitalna-strategia.html">Digitálna stratégia</a>
                 </div>
             </div>
@@ -128,7 +129,8 @@
         <div>
             <i aria-hidden="true" class="fa fa-wordpress" id="con-ser-icon4"></i>
             <h3>Inštalácia</h3>
-            <p class="con-ser-p">Nainštalujeme na Vašú domenu WordPress s ktorým pár úkonov zvládnete aj Vy bez znalosti kódu…</p>
+            <p class="con-ser-p">Nainštalujeme na Vašu domenu WordPress s ktorým pár úkonov zvládnete aj Vy bez znalosti
+                kódu…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-cogs" id="con-ser-icon5"></i>
@@ -146,7 +148,8 @@
             <i aria-hidden="true" class="fa fa-mouse-pointer" id="con-ser-icon7"></i>
             <h3>Funkčnosť</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Na to aby to fungovalo nestači len pekný dizajn. Každe tlačidlo alebo animácia musí fungovať ako chceme my…</p>
+            <p class="con-ser-p">Na to aby to fungovalo nestačí len pekný dizajn. Každé tlačidlo alebo animácia musí
+                fungovať ako chceme my…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-shield" id="con-ser-icon8"></i>
@@ -170,13 +173,14 @@
             <i aria-hidden="true" class="fa fa-user-secret" id="con-ser-icon11"></i>
             <h3>Odovzdanie webu</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">Odovzdáme Vám všetky potrebné prihlasovacie udajé na správu Vašého webu…</p>
+            <p class="con-ser-p">Odovzdáme Vám všetky potrebné prihlasovacie údaje na správu Vášho webu…</p>
         </div>
         <div>
             <i aria-hidden="true" class="fa fa-volume-control-phone" id="con-ser-icon12"></i>
             <h3>Podpora</h3>
             <span class="spacer2"></span>
-            <p class="con-ser-p">V prípade že správu domeny a hostingu necháte na nás. Tak sme tu pre Vás 24/7 pri neočakávaných chybách domeny…</p>
+            <p class="con-ser-p">V prípade že správu domény a hostingu necháte na nás. Tak sme tu pre Vás 24/7 pri
+                neočakávaných chybách domeny…</p>
         </div>
     </section>
     <section class="content-ser-line">
@@ -212,8 +216,10 @@
                 <div class="menu-1">
                     <button class="accordion"><span class="btn-text">Dodanie služby</span></button>
                     <div class="panel">
-                        <p>Hotový web Vám odovzdáme ako náhle bude dokončený podľa Vaších predstáv. Všetky prístupové údaje a informácie doručíme bezpečne aby sa k ním nedostala tretia strana.</p>
+                        <p>Hotový web Vám odovzdáme akonáhle bude dokončený podľa Vašich predstáv. Všetky prístupové
+                            údaje a informácie doručíme bezpečne aby sa k nim nedostala tretia strana.</p>
                     </div>
+
 
                 </div>
                 <div class="menu-2">
@@ -221,6 +227,7 @@
                     <div class="panel">
                         <p>Platba za službu je možná len prevodom na náš účet alebo v hotovosti pri realizácií služby.</p>
                     </div>
+
 
                 </div>
                 <div class="menu-3">
@@ -230,9 +237,12 @@
                         <p>Radi Vám ich zodpovieme v sekcii <a class="text-link" href="../kontakt.html">kontakt</a></p>
                     </div>
 
+
                 </div>
 
+
             </div>
+
 
         </div>
     </div>
@@ -263,7 +273,7 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
-                    <a href="../sluzby/graficky-dizajn.html">Graficky dizajn</a>
+                    <a href="../sluzby/graficky-dizajn.html">Grafický dizajn</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-angle-right"></i>
@@ -301,7 +311,7 @@
             <div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-map-marker"></i>
-                    <a href="#">Niekde na platnéte Zem</a>
+                    <a href="#">Niekde na planéte Zem</a>
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-phone"></i>
@@ -309,8 +319,9 @@
                 </div>
                 <div class="fot-text">
                     <i aria-hidden="true" class="fa fa-envelope-o"></i>
-                    <a href="mailto:jaroslavpotocny@icloud.com">info@jpgeneration.sk</a>
+                    <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
+
 
             </div>
         </div>
@@ -356,7 +367,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="mailto:jaroslavpotocny@icloud.com">
+                    <a href="mailto:info@jpgeneration.sk">
                         <span></span>
                         <span></span>
                         <span></span>
@@ -382,3 +393,4 @@
 <script src="../../js/acordion-faq.js" type="text/javascript"></script>
 </body>
 </html>
+
