JP GENERATION - CHANGE FONTAWSOME VERSION

--- a/plne-responzivny-web/jpgeneration/index.html
+++ b/plne-responzivny-web/jpgeneration/index.html
@@ -186,7 +186,7 @@
             <p class="con-p">Netrápte sa s tým že nemáte predstavu ako by to malo vyzerať. Vymyslíme to za Vás…</p>
         </div>
         <div class="kon-con3">
-            <i aria-hidden="true" class="fa fa-lightbulb-o" id="icon-con3"></i>
+            <i aria-hidden="true" class="fa-solid fa-lightbulb" id="icon-con3"></i>
             <h3 class="con-h">Kreatívne riešenia</h3>
             <div class="line-con"></div>
             <p class="con-p">Veľké nápady si žiadajú kreatívne riešenia ktoré Vám poskytneme…</p>
@@ -209,7 +209,7 @@
     </div>
     <section class="content1">
         <div class="white">
-            <i aria-hidden="true" class="fa fa-camera" id="ser-icon1"></i>
+            <i aria-hidden="true" class="fa-solid fa-camera-retro" id="ser-icon1"></i>
             <h3>Foto produkcia</h3>
             <p class="con-p">Profesionálne fotografie pre Váš e-shop, sociálne siete alebo udalosť na ktorú nechcete
                 zabudnúť…</p>
@@ -222,7 +222,7 @@
                 nie je ono? Spracujeme Vám video na ktoré budete vedieť pozerať dookola…</p>
         </div>
         <div class="white">
-            <i aria-hidden="true" class="fa fa-pencil-square-o" id="ser-icon3"></i>
+            <i aria-hidden="true" class="fa-solid fa-object-group" id="ser-icon3"></i>
             <h3>Grafický dizajn</h3>
             <p class="con-p">Banner, logo, plagát, vizitka, vizualizácia…
                 Všetko čo Vám napadne pod slovo graficky dizajn…</p>
@@ -230,7 +230,7 @@
     </section>
     <section class="content2">
         <div>
-            <i aria-hidden="true" class="fa fa-wordpress" id="ser-icon4"></i>
+            <i aria-hidden="true" class="fa-brands fa-wordpress-simple" id="ser-icon4"></i>
             <h3>WordPress web</h3>
             <span class="spacer"></span>
             <p class="con-p">Vytvoríme Vám web na mieru bez starostí od blogu až po e-shop… </p>
@@ -241,7 +241,7 @@
             <p class="con-p">Zaberá Vám správa Vášho eshopu veľa času? Nechajte to na Nás…</p>
         </div>
         <div>
-            <i aria-hidden="true" class="fa fa-line-chart" id="ser-icon6"></i>
+            <i aria-hidden="true" class="fa-solid fa-chart-column" id="ser-icon6"></i>
             <h3>Digitálna stratégia</h3>
             <span class="spacer"></span>
             <p class="con-p">Každá dobrá stratégia potrebuje analýzu ktorú Vám poskytneme…</p>
@@ -537,7 +537,7 @@
                     <a href="tel:0907112358">+421 907 112 358</a>
                 </div>
                 <div class="fot-text">
-                    <i aria-hidden="true" class="fa fa-envelope-o"></i>
+                    <i aria-hidden="true" class="fa-solid fa-envelope"></i>
                     <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
 
@@ -555,7 +555,7 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <span class="fa fa-facebook"></span>
+                        <span class="fa-brands fa-facebook"></span>
                     </a>
                 </li>
                 <li>
