--- a/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/sprava-domeny-a-hostingu.html
@@ -292,7 +292,7 @@
                     <a href="tel:0907112358">+421 907 112 358</a>
                 </div>
                 <div class="fot-text">
-                    <i aria-hidden="true" class="fa fa-envelope-o"></i>
+                    <i aria-hidden="true" class="fa-solid fa-envelope"></i>
                     <a href="mailto:info@jpgeneration.sk">info@jpgeneration.sk</a>
                 </div>
 
