--- a/plne-responzivny-web/jpgeneration/cennik/cena-video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/cennik/cena-video-produkcia.html
@@ -202,7 +202,7 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <span class="fa fa-facebook"></span>
+                        <span class="fa-brands fa-facebook"></span>
                     </a>
                 </li>
                 <li>
