--- a/plne-responzivny-web/jpgeneration/portfolio/video.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/video.html
@@ -218,7 +218,7 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <span class="fa fa-facebook"></span>
+                        <span class="fa-brands fa-facebook"></span>
                     </a>
                 </li>
                 <li>
