--- a/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/graficky-dizajn.html
@@ -308,7 +308,7 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <span class="fa fa-facebook"></span>
+                        <span class="fa-brands fa-facebook"></span>
                     </a>
                 </li>
                 <li>
