--- a/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
+++ b/plne-responzivny-web/jpgeneration/sluzby/video-produkcia.html
@@ -307,7 +307,7 @@
                         <span></span>
                         <span></span>
                         <span></span>
-                        <span class="fa fa-facebook"></span>
+                        <span class="fa-brands fa-facebook"></span>
                     </a>
                 </li>
                 <li>
