JP GENERATION - CHANGE FONTAWSOME VERSION

--- a/plne-responzivny-web/jpgeneration/portfolio/fotky.html
+++ b/plne-responzivny-web/jpgeneration/portfolio/fotky.html
@@ -1184,12 +1184,12 @@
     </div>
     <div class="modal-content">
         <div class="image-count" id="imageCount"></div>
-        <div class="prev"><i aria-hidden="true" class="fa fa-chevron-left"></i></div>
+        <div class="prev"><i aria-hidden="true" class="fa fa-chevron-left" id="left"></i></div>
         <div id="photoCountContainer">
             <div id="photoCount"></div>
         </div>
         <img alt="modal" id="modalImage-port">
-        <div class="next"><i aria-hidden="true" class="fa fa-chevron-right"></i></div>
+        <div class="next"><i aria-hidden="true" class="fa fa-chevron-right" id="right"></i></div>
     </div>
 </div>
 <br>
